# PyRepl

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  debug.txt  helper.py  helper2.py  pyrepl.py  pyrepl.vim  requirements.txt  setup.cfg  test.py  test2.py  test3.py  tox.ini
.github/workflows/: python-package.yml
after/syntax/: python.vim
autoload/: pyrepl.vim
doc/: pyrepl.txt
ftplugin/: python.vim
plugin/: pyrepl.vim
src/pyrepl/: __init__.py  __main__.py  codeblock.py  codeblock2.py  console.py  fdio.py  interpreter.py  parser.py  runner.py  segments.py
tests/: helper.py  manual_test_aoc.py  test.py  test_basic.py  test_performance.py  test_runner.py  timing.py
tests/data/basic/eval_simple/: input.py  output.py
tests/data/basic/exec_simple/: input.py  output.py
tests/data/basic/func_dec_simple/: input.py  output.py
tests/data/basic/imports/: input.py
tests/data/constructs_basic/func_dec/: input.py  output.py
tests/data/constructs_basic/if_statement/: input.py  output.py
tests/data/constructs_basic/try_except/: input.py  output.py
tests/data/decorators/: input.py  output.py
tests/data/errors/corner_cases/: input.py  output-3-7.py  output.py
tests/data/errors/end_on_error/: input.py  output-3-8.py  output.py
tests/data/errors/incomplete_construct/: input.py  output-3-6.py  output.py
tests/data/errors/indentation/: input.py  output-3-7.py  output.py
tests/data/errors/nested/: input.py  output.py
tests/data/errors/simple/: input.py  output-3-7.py  output-3-8.py  output.py
tests/data/info_messages/info_newline_missing/: input.py  (+1 more)
(+34 files in other folders)
