[metadata]
name = pyrepl
version = 0.4.1
description = A helper package for running python code as if it were in a REPL, and dumping the formatted stdout.
long_description = file: README.md

[options]
package_dir=
	=src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
dev =
	pytest
	pytest-timeout
	flake8
	tox

[flake8]
ignore = W191,E221,E272
exclude = .git,.tox,__pycache__,tests/data,venv,venv36,venv37,venv38
max-complexity = 10
max-line-length = 127
count = True
statistics = True
